# my_video_compressor

./: .gitignore  Cargo.toml  README.md
src/: main.rs
